JumpScript/tests/baselines/reference/parser509669.errors.txt
tests/cases/conformance/parser/ecmascript5/RegressionTests/parser509669.jump(2,17): error TS1005: '=>' expected.


==== tests/cases/conformance/parser/ecmascript5/RegressionTests/parser509669.jump (1 errors) ====
    function foo():any {
     return ():void {};
                    ~
!!! error TS1005: '=>' expected.
    }